@@ -6,7 +6,7 @@
         <setting type="sep" />
         <setting id="shortnames" type="bool" label="100020" default="true" />
         <setting id="showscores" type="bool" label="100032" default="true" />
-        <setting id="viewmode" type="labelenum" label="100037" values="Default|Big List|List" default="Default" />
+        <setting id="viewmode" type="labelenum" label="100037" values="Default|Big List|List|Thumbnail" default="Default" />
         <setting id="showfanart" type="bool" label="100034" default="false" />
     </category>
 	<category label="100040">
@@ -20,7 +20,8 @@
         <setting id="flash" type="bool" label="100017" default="true" />
         <setting id="truelive" type="bool" label="100026" default="true" />
         <setting id="istream" type="bool" label="100016" default="true" />
-        <setting id="wmv" type="bool" label="100027" default="true" />
         <setting id="dvr" type="bool" label="100035" default="false" />
+        <setting id="progressive" type="labelenum" label="Enable Progressive (beta)" values="Disabled|Custom|Asia|Australia|Europe|North America - Central|North America - East|North America - East Canada|North America - West" default="Disabled" />
+        <setting id="progressiveCustomUrl" type="text" label="    Progressive URL" enable="eq(-1,1)"  default="http://198.23.71.68/vod5/" />
     </category>
 </settings>
