@@ -14,12 +14,14 @@ class Mode:
     ONDEMAND_BYDATE_YEARMONTH = 4
     ONDEMAND_BYDATE_YEARMONTH_DAY = 5
     ONDEMAND_BYDATE_YEARMONTH_DAY_EVENT = 6
-    ONDEMAND_BYTEAM = 7
-    ONDEMAND_BYTEAM_LEAGUE = 8
-    ONDEMAND_BYTEAM_LEAGUE_TEAM = 9
-    ONDEMAND_BYTEAM_LEAGUE_TEAM_EVENT = 10
-    LIVE = 11
-    LIVE_EVENT = 12
+    ONDEMAND_BYDATE_CUSTOM = 7
+    ONDEMAND_BYDATE_CUSTOM_YEARMONTH = 8
+    ONDEMAND_BYTEAM = 9
+    ONDEMAND_BYTEAM_LEAGUE = 10
+    ONDEMAND_BYTEAM_LEAGUE_TEAM = 11
+    ONDEMAND_BYTEAM_LEAGUE_TEAM_EVENT = 12
+    LIVE = 13
+    LIVE_EVENT = 14
 
 # Method to get the parameters for the current view
 # @return an array of parameters
